# THOR

./: .gitignore  ARCHITECTURE.md  COMMANDES.md  README.md  STRUCTURE.md  pyproject.toml  requirements.txt
api/: __init__.py  app.py  requirements.txt
configs/: base.yaml
configs/nlp/: regex_advanced.yaml  spacy_base.yaml  spacy_finetuned.yaml  transformers_base.yaml
configs/pipeline/: full.yaml
configs/stt/: vosk.yaml  whisper_small.yaml
data/raw/: README.md  dataset_gares.csv  feed_info.txt  full_cities.csv  routes.txt  stops.txt
data/splits/: README.md  full_dataset.jsonl  full_nlp_dataset.jsonl
data/train_station/: dataset_gares.json  dataset_liaisons.json  dataset_liaisons_enhanced.json
docs/: COMMANDES.md  DOCUMENTATION.md
docs/nlp/: dummy.md  index.md  regex_advanced.md  spacy.md  transformers.md
docs/pathfinding/: dijkstra.md  index.md
docs/stt/: dummy.md  index.md  vosk.md  whisper.md
examples/: whisper_example.py
results/: pipeline_audio_test.json  pipeline_test_examples.json
results/benchmarks/: benchmark_whisper_20251205_135308.json  benchmark_whisper_20251205_135308.md  (+3 more)
scripts/: README.md  USAGE.md  __init__.py  benchmark_whisper.py  clean_project.py  download_whisper_model.py  extract_connections.py  full_cities_converter.py  generate_audio.py  generate_enhanced_graph.py  generate_nlp_dataset.py  generate_railway_shapes.py  generate_stt_dataset.py  prepare_splits.py  test_pipeline_examples.py  train_all_nlp_models.py  train_station_converter.py
src/: __init__.py
src/cli/: nlp.py  (+4 more)
tests/: README.md  __init__.py
web/: package-lock.json  package.json
(+146 files in other folders)
